feat(UI): Enhance captured pieces display with FlowPane, sorting, and styling